# vocal-to-midi

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
environments/: Dockerfile
environments/cpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
notebooks/: 002_essential_BPM.ipynb  003_try_basic-pitch.ipynb  004_piano_visualizer.ipynb
src/: 00_README.py  redirect.py  roll.py  streamlit_app.py
src/pages/: 01_separation.py  02_audio_to_midi.py
