[tool.poetry]
name = "vocal-to-midi"
version = "0.1.0"
description = "streamlit application for audio separation and midi generation"
license = "Apache License Version 2.0"
authors = ["Masaki Aota"]
maintainers = ["masakiaota <aotamasakimail@gmail.com>"]
readme = "README.md"
keywords = [
    "Python",
    "streamlit",
    "audio",
    "separation",
    "midi",
    "generation",
    "music",
]

classifiers = [
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
]
packages = [{include = "vocal-to-midi", from="src"}]


[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^12.0.0"
joblib = "^1.2.0"
tqdm = "^4.65.0"
dora-search = "^0.1.11"
demucs = {git = "https://github.com/facebookresearch/demucs"}
streamlit = "<1.22.0"
polars = "<0.17.11"
essentia = "^2.1b6.dev1034"
matplotlib = "<3.7.1"
basic-pitch = "^0.2.4"
keras = ">=2.6.0,<2.7.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
flake8 = "^5.0.0"
pytest-cov = "^4.0.0"
jupyterlab = "^3.6.3"
jupyterlab-git = "^0.41.0"
mypy = "<1.2.0"
black = "<22.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
